<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            style="@style/input_title_field"
            android:text="@string/select_strength" />

        <Spinner
            android:id="@+id/spinner_strength"
            style="@style/rank_selection" />

        <TextView
            style="@style/input_title_field"
            android:text="@string/select_intelligence" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_intelligence"
            style="@style/rank_selection" />

        <TextView
            style="@style/input_title_field"
            android:text="@string/select_speed" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_speed"
            style="@style/rank_selection" />

        <TextView
            style="@style/input_title_field"
            android:text="@string/select_endurance" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_endurance"
            style="@style/rank_selection" />

        <TextView
            style="@style/input_title_field"
            android:text="@string/select_rank" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_rank"
            style="@style/rank_selection" />

        <TextView
            style="@style/input_title_field"
            android:text="@string/select_courage" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_courage"
            style="@style/rank_selection" />

        <TextView
            style="@style/input_title_field"
            android:text="@string/select_firepower" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_firepower"
            style="@style/rank_selection" />

        <TextView
            style="@style/input_title_field"
            android:text="@string/select_skill" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_skill"
            style="@style/rank_selection" />

        <TextView
            style="@style/input_title_field"
            android:text="@string/select_team" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_team"
            style="@style/rank_selection"
            android:entries="@array/team" />


        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_between_input_fields"
            android:text="@string/done" />


    </LinearLayout>

</ScrollView>

